--- a/Burgers_noise_final-003.ipynb
+++ b/Burgers_noise_final-003.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run Classes/SPDEs.ipynb\n",
-    "%run Classes/Rule.ipynb\n",
-    "%run Classes/Model.ipynb\n",
-    "%run Classes/Noise.ipynb\n",
-    "%run Classes/full_visualization.ipynb\n",
-    "%run Algorithms/Algorithm_2_FFT.ipynb\n",
-    "%run Classes/Burgers_PDE_FIND.ipynb\n",
+    "%run SPDEs.ipynb\n",
+    "%run Rule.ipynb\n",
+    "%run Model.ipynb\n",
+    "%run Noise.ipynb\n",
+    "%run full_visualization.ipynb\n",
+    "%run Algorithm_2_FFT.ipynb\n",
+    "%run Burgers_PDE_FIND.ipynb\n",
     "\n",
     "#Disable progress bars from tqdm\n",
     "from functools import partialmethod\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,19 +78,221 @@
      "output_type": "stream",
      "text": [
       "Creating Model\n",
-      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-efb32890576f>:264: RuntimeWarning: overflow encountered in multiply\n",
+      "  non_linearity = np.fft.fft( - lambd*soln[:,i-1,:-1]*diff*dt + self.sigma_(soln[:,i-1,:-1])*dW[:,i,:-1], axis=-1)\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in multiply\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numerical Scheme for PDE-FIND failed for 2 equation with the above coefficients.\n",
       "Finished experiment 1\n",
       "Creating Model\n",
-      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-efb32890576f>:264: RuntimeWarning: overflow encountered in multiply\n",
+      "  non_linearity = np.fft.fft( - lambd*soln[:,i-1,:-1]*diff*dt + self.sigma_(soln[:,i-1,:-1])*dW[:,i,:-1], axis=-1)\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in multiply\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
       "Finished experiment 2\n",
       "Creating Model\n",
-      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-efb32890576f>:264: RuntimeWarning: overflow encountered in multiply\n",
+      "  non_linearity = np.fft.fft( - lambd*soln[:,i-1,:-1]*diff*dt + self.sigma_(soln[:,i-1,:-1])*dW[:,i,:-1], axis=-1)\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numerical Scheme for PDE-FIND failed for 1 equation with the above coefficients.\n",
       "Finished experiment 3\n",
       "Creating Model\n",
       "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-efb32890576f>:264: RuntimeWarning: overflow encountered in multiply\n",
+      "  non_linearity = np.fft.fft( - lambd*soln[:,i-1,:-1]*diff*dt + self.sigma_(soln[:,i-1,:-1])*dW[:,i,:-1], axis=-1)\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in multiply\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numerical Scheme for PDE-FIND failed for 4 equation with the above coefficients.\n",
+      "Finished experiment 4\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-efb32890576f>:264: RuntimeWarning: overflow encountered in multiply\n",
+      "  non_linearity = np.fft.fft( - lambd*soln[:,i-1,:-1]*diff*dt + self.sigma_(soln[:,i-1,:-1])*dW[:,i,:-1], axis=-1)\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numerical Scheme for PDE-FIND failed for 1 equation with the above coefficients.\n",
+      "Finished experiment 5\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-efb32890576f>:264: RuntimeWarning: overflow encountered in multiply\n",
+      "  non_linearity = np.fft.fft( - lambd*soln[:,i-1,:-1]*diff*dt + self.sigma_(soln[:,i-1,:-1])*dW[:,i,:-1], axis=-1)\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in multiply\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numerical Scheme for PDE-FIND failed for 3 equation with the above coefficients.\n",
+      "Finished experiment 6\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-efb32890576f>:264: RuntimeWarning: overflow encountered in multiply\n",
+      "  non_linearity = np.fft.fft( - lambd*soln[:,i-1,:-1]*diff*dt + self.sigma_(soln[:,i-1,:-1])*dW[:,i,:-1], axis=-1)\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in multiply\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numerical Scheme for PDE-FIND failed for 7 equation with the above coefficients.\n",
+      "Finished experiment 7\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-efb32890576f>:264: RuntimeWarning: overflow encountered in multiply\n",
+      "  non_linearity = np.fft.fft( - lambd*soln[:,i-1,:-1]*diff*dt + self.sigma_(soln[:,i-1,:-1])*dW[:,i,:-1], axis=-1)\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in multiply\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numerical Scheme for PDE-FIND failed for 1 equation with the above coefficients.\n",
+      "Finished experiment 8\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-efb32890576f>:264: RuntimeWarning: overflow encountered in multiply\n",
+      "  non_linearity = np.fft.fft( - lambd*soln[:,i-1,:-1]*diff*dt + self.sigma_(soln[:,i-1,:-1])*dW[:,i,:-1], axis=-1)\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numerical Scheme for PDE-FIND failed for 1 equation with the above coefficients.\n",
+      "Finished experiment 9\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-efb32890576f>:264: RuntimeWarning: overflow encountered in multiply\n",
+      "  non_linearity = np.fft.fft( - lambd*soln[:,i-1,:-1]*diff*dt + self.sigma_(soln[:,i-1,:-1])*dW[:,i,:-1], axis=-1)\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n",
+      "<ipython-input-1-efb32890576f>:266: RuntimeWarning: invalid value encountered in multiply\n",
+      "  soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numerical Scheme for PDE-FIND failed for 2 equation with the above coefficients.\n",
+      "Finished experiment 10\n",
+      "CPU times: user 11h 5min 30s, sys: 7min 30s, total: 11h 13min 1s\n",
+      "Wall time: 11h 13min 56s\n"
      ]
     }
    ],
@@ -238,9 +440,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average average error: 0.1374103633762466\n",
+      "Maximum average error: 0.17616187321482907\n",
+      "Minimum average error: 0.08676357231488188\n",
+      "\n",
+      "Average maximum error: 0.3769444518353324\n",
+      "Maximum maximum error: 0.6831588938460369\n",
+      "Minimum maximum error: 0.19028172216582012\n",
+      "\n",
+      "Average minimum error: 0.06001538211435973\n",
+      "Maximum minimum error: 0.08493583821563037\n",
+      "Minimum minimum error: 0.018102129934470666\n",
+      "\n",
+      "=====================\n",
+      "Average average error: 0.1914140078451705\n",
+      "Maximum average error: 0.25091438757774787\n",
+      "Minimum average error: 0.1387380437253716\n",
+      "\n",
+      "Average maximum error: 0.5287346733745013\n",
+      "Maximum maximum error: 0.7709771378639619\n",
+      "Minimum maximum error: 0.3651493666038643\n",
+      "\n",
+      "Average minimum error: 0.0509103102536899\n",
+      "Maximum minimum error: 0.06636971791706055\n",
+      "Minimum minimum error: 0.031850507746223444\n",
+      "\n",
+      "=====================\n"
+     ]
+    }
+   ],
    "source": [
     "for exps in [exps_Alg2, exps_find]:\n",
     "\n",
@@ -264,9 +499,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average viscosity: 0.02697245885546174, lambda: -0.7331369171122778\n",
+      "Maximum viscosity: 0.037554184374587775, lambda: -0.6398019103314243\n",
+      "Minimum viscosity: 0.021103876074825657, lambda: -0.7962774859523873\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Average viscosity: {}, lambda: {}\".format(np.mean(exps_find_eps), np.mean(exps_find_lambd)))\n",
     "print(\"Maximum viscosity: {}, lambda: {}\".format(max(exps_find_eps), max(exps_find_lambd)))\n",
@@ -290,7 +535,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -304,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
