--- a/Burgers_no_noise.ipynb
+++ b/Burgers_no_noise.ipynb
@@ -11,7 +11,6 @@
     "%run Classes/Model.ipynb\n",
     "%run Classes/Noise.ipynb\n",
     "%run Classes/full_visualization.ipynb\n",
-    "# %run Algorithms/Algorithm_2.ipynb\n",
     "%run Algorithms/Algorithm_2_FFT.ipynb\n",
     "%run Classes/Burgers_PDE_FIND.ipynb\n",
     "\n",
@@ -312,6 +311,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average std: 0.5093581748419989\n",
+      "Maximum std: 4.269469520881238\n",
+      "Minimum std: 0.00048755456829023227\n",
+      "\n",
+      "=====================\n",
+      "Average std: 0.012626848223247883\n",
+      "Maximum std: 0.023137059364468526\n",
+      "Minimum std: 0.004085261345111136\n",
+      "\n",
+      "=====================\n"
+     ]
+    }
+   ],
+   "source": [
+    "for exps in [exps_Alg2, exps_find]:\n",
+    "\n",
+    "    print(\"Average std:\", np.mean([e.std_er for e in exps]))\n",
+    "    print(\"Maximum std:\", max([e.std_er for e in exps]))\n",
+    "    print(\"Minimum std:\", min([e.std_er for e in exps]))\n",
+    "    print('')\n",
+    "\n",
+    "    print(\"=====================\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
@@ -333,13 +365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Experiments where no outliers were present in the Algorithm2\n",
+      "\n",
       "Average average error: 0.004621144089675013\n",
       "Maximum average error: 0.024759779748431042\n",
       "Minimum average error: 0.0008716690024409078\n",
@@ -370,8 +404,14 @@
     }
    ],
    "source": [
-    "K = {5,8}\n",
-    "for exps in [[exps_Alg2[k] for k in range(10) if k not in K], [exps_find[k] for k in range(10) if k not in K]]:\n",
+    "outlier_experiments = {i for i in range(N) if exps_Alg2[i].max_er > 1}\n",
+    "no_outlier_exps_Alg2 = [exps_Alg2[k] for k in range(N) if k not in outlier_experiments]\n",
+    "no_outlier_exps_find = [exps_find[k] for k in range(N) if k not in outlier_experiments]\n",
+    "\n",
+    "print('Experiments where no outliers were present in the Algorithm2')\n",
+    "print('')\n",
+    "\n",
+    "for exps in [no_outlier_exps_Alg2, no_outlier_exps_find]:\n",
     "\n",
     "    print(\"Average average error:\", np.mean([e.av_er for e in exps]))\n",
     "    print(\"Maximum average error:\", max([e.av_er for e in exps]))\n",
@@ -393,178 +433,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.0031742280727352357,\n",
-       " 0.0027738661350978984,\n",
-       " 0.0011391455704475523,\n",
-       " 0.0027636723721892018,\n",
-       " 0.002623507380202401,\n",
-       " 0.005821907167080326,\n",
-       " 10.504957316486482,\n",
-       " 0.017269730852147894,\n",
-       " 0.0017297188700348355,\n",
-       " 0.0631502780354008,\n",
-       " 12.006201369360152,\n",
-       " 13.014984894053104,\n",
-       " 0.004545341317388923,\n",
-       " 4.7079147361262725,\n",
-       " 0.01696177965370958,\n",
-       " 0.0025677566192509184,\n",
-       " 0.004519920527451801,\n",
-       " 0.0024768166484147253,\n",
-       " 0.004769717751739776,\n",
-       " 0.0015792308710345132]"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exps_Alg2[5].error_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.00134322900869213,\n",
-       " 0.0023225003487707422,\n",
-       " 0.003633534798451749,\n",
-       " 0.004808361935723348,\n",
-       " 0.0059972324805139775,\n",
-       " 0.006262054974366487,\n",
-       " 0.0008991772429137162,\n",
-       " 0.002663918229103143,\n",
-       " 0.0006243362953070477,\n",
-       " 0.001297372873600585,\n",
-       " 0.0029191170013166496,\n",
-       " 3.618904854562451,\n",
-       " 0.0011388553340861299,\n",
-       " 0.0009094055448545618,\n",
-       " 0.002432226666138315,\n",
-       " 0.0016008994011953335,\n",
-       " 0.0043004270151504155,\n",
-       " 0.004238149493141338,\n",
-       " 0.0051862231277614605,\n",
-       " 0.0006740684339616821]"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exps_Alg2[8].error_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.0014761848295323985,\n",
-       " 0.0025441568831565697,\n",
-       " 0.002336394396734921,\n",
-       " 0.002811231879735304,\n",
-       " 0.0008481723404014112,\n",
-       " 0.003099896381744059,\n",
-       " 0.0016579433182324298,\n",
-       " 0.0007054061102531823,\n",
-       " 0.0017260607259161152,\n",
-       " 0.010466699936685819,\n",
-       " 0.0005207001560206798,\n",
-       " 0.0037617268661389856,\n",
-       " 0.0021027817121311064,\n",
-       " 0.000650973129420816,\n",
-       " 0.0008085207645555947,\n",
-       " 0.0018030957793219182,\n",
-       " 0.0009440378011368112,\n",
-       " 0.009520858683816445,\n",
-       " 0.0005913438482277973,\n",
-       " 0.0009760946844685452]"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exps_Alg2[6].error_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.024282721887714992,\n",
-       " 0.049243447127595985,\n",
-       " 0.013345710280536,\n",
-       " 0.00971454517579864,\n",
-       " 0.0055370951143931865,\n",
-       " 0.021589313000175747,\n",
-       " 0.01021387061796582,\n",
-       " 0.013297356163619841,\n",
-       " 0.016762805516430977,\n",
-       " 0.0525460857008907,\n",
-       " 0.010336179071284984,\n",
-       " 0.013668393252971558,\n",
-       " 0.01926259576113366,\n",
-       " 0.012447455836770403,\n",
-       " 0.015249722759090454,\n",
-       " 0.017744997682418846,\n",
-       " 0.004777541983929848,\n",
-       " 0.0753868012079021,\n",
-       " 0.004677630311192571,\n",
-       " 0.013194155833573248]"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exps_find[6].error_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of equations that failed for Algorithm 2: 5\n",
+      "Prediction errors in Algorithm2 in Outlier Experiments\n",
+      "Experiment number: 8\n",
+      "Errors: [1.34322901e-03 2.32250035e-03 3.63353480e-03 4.80836194e-03\n",
+      " 5.99723248e-03 6.26205497e-03 8.99177243e-04 2.66391823e-03\n",
+      " 6.24336295e-04 1.29737287e-03 2.91911700e-03 3.61890485e+00\n",
+      " 1.13885533e-03 9.09405545e-04 2.43222667e-03 1.60089940e-03\n",
+      " 4.30042702e-03 4.23814949e-03 5.18622313e-03 6.74068434e-04]\n",
+      "===============================\n",
+      "Experiment number: 5\n",
+      "Errors: [3.17422807e-03 2.77386614e-03 1.13914557e-03 2.76367237e-03\n",
+      " 2.62350738e-03 5.82190717e-03 1.05049573e+01 1.72697309e-02\n",
+      " 1.72971887e-03 6.31502780e-02 1.20062014e+01 1.30149849e+01\n",
+      " 4.54534132e-03 4.70791474e+00 1.69617797e-02 2.56775662e-03\n",
+      " 4.51992053e-03 2.47681665e-03 4.76971775e-03 1.57923087e-03]\n",
+      "===============================\n",
+      "Majority of predictions still have small errors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Prediction errors in Algorithm2 in Outlier Experiments')\n",
+    "for k in outlier_experiments:\n",
+    "    print('Experiment number:', k)\n",
+    "    print('Errors:', np.array(exps_Alg2[k].error_list))\n",
+    "    print('===============================')\n",
+    "print('Majority of predictions still have small errors.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sdandard deviations of the errors for the test cases that do not cointain Outliers:\n",
+      "Average std: 0.0044998817256927835\n",
+      "Maximum std: 0.025072254528455164\n",
+      "Minimum std: 0.00048755456829023227\n",
       "\n",
+      "=====================\n",
+      "Average std: 0.012567140365391576\n",
+      "Maximum std: 0.023137059364468526\n",
+      "Minimum std: 0.004085261345111136\n",
+      "\n",
+      "=====================\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Sdandard deviations of the errors for the test cases that do not cointain Outliers:')\n",
+    "\n",
+    "for exps in [no_outlier_exps_Alg2, no_outlier_exps_find]:\n",
+    "\n",
+    "    print(\"Average std:\", np.mean([e.std_er for e in exps]))\n",
+    "    print(\"Maximum std:\", max([e.std_er for e in exps]))\n",
+    "    print(\"Minimum std:\", min([e.std_er for e in exps]))\n",
+    "    print('')\n",
+    "\n",
+    "    print(\"=====================\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of equations that failed for Algorithm 2 (Outliers): 0\n",
+      "\n",
+      "Errors without outliers:\n",
       "Avg error for Algorithm 2: 0.004771798781525011\n",
       "Max error for Algorithm 2: 0.09106565603453168\n",
       "Min error for Algorithm 2: 9.956414452728521e-05\n",
+      "\n",
       "========================================\n",
       "\n",
-      "Number of equations that failed for PDE-FIND: 0\n",
+      "Number of equations that failed for PDE-FIND (Outliers): 0\n",
       "\n",
+      "Errors without outliers:\n",
       "Avg error for PDE-FIND: 0.017157013549694906\n",
       "Max error for PDE-FIND: 0.10867721447684361\n",
       "Min error for PDE-FIND: 0.0010323092613782703\n"
@@ -579,22 +539,24 @@
     "    list_of_errors_Alg2 += exps_Alg2[k].error_list\n",
     "    list_of_errors_find += exps_find[k].error_list\n",
     "\n",
-    "list_of_errors_Alg2 = np.array([err for err in list_of_errors_Alg2 if err < 1])\n",
-    "list_of_errors_find = np.array([err for err in list_of_errors_find if err < 1])\n",
+    "list_of_errors_Alg2_no_outliers = np.array([err for err in list_of_errors_Alg2 if err < 1])\n",
+    "list_of_errors_find_no_outliers = np.array([err for err in list_of_errors_find if err < 1])\n",
     "\n",
-    "print('Number of equations that failed for Algorithm 2:', m*N - len(list_of_errors_Alg2))\n",
+    "print('Number of equations that failed for Algorithm 2 (Outliers):', m*N - len(list_of_errors_Alg2))\n",
     "print('')\n",
-    "print('Avg error for Algorithm 2:', list_of_errors_Alg2.mean())\n",
-    "print('Max error for Algorithm 2:', list_of_errors_Alg2.max())\n",
-    "print('Min error for Algorithm 2:', list_of_errors_Alg2.min())\n",
-    "\n",
+    "print('Errors without outliers:')\n",
+    "print('Avg error for Algorithm 2:', list_of_errors_Alg2_no_outliers.mean())\n",
+    "print('Max error for Algorithm 2:', list_of_errors_Alg2_no_outliers.max())\n",
+    "print('Min error for Algorithm 2:', list_of_errors_Alg2_no_outliers.min())\n",
+    "print('')\n",
     "print('========================================')\n",
     "print('')\n",
-    "print('Number of equations that failed for PDE-FIND:', m*N - len(list_of_errors_find))\n",
+    "print('Number of equations that failed for PDE-FIND (Outliers):', m*N - len(list_of_errors_find))\n",
     "print('')\n",
-    "print('Avg error for PDE-FIND:', list_of_errors_find.mean())\n",
-    "print('Max error for PDE-FIND:', list_of_errors_find.max())\n",
-    "print('Min error for PDE-FIND:', list_of_errors_find.min())"
+    "print('Errors without outliers:')\n",
+    "print('Avg error for PDE-FIND:', list_of_errors_find_no_outliers.mean())\n",
+    "print('Max error for PDE-FIND:', list_of_errors_find_no_outliers.max())\n",
+    "print('Min error for PDE-FIND:', list_of_errors_find_no_outliers.min())"
    ]
   },
   {
