--- a/Algorithms/Algorithm_2_FFT.ipynb
+++ b/Algorithms/Algorithm_2_FFT.ipynb
@@ -28,9 +28,9 @@
     "Error1 = lambda x, y: err1(x,y)/err1(np.zeros(y.shape), y)\n",
     "Error2 = lambda x, y: err2(x,y)/err2(np.zeros(y.shape), y)\n",
     "\n",
-    "%run SPDEs.ipynb\n",
-    "%run Rule.ipynb\n",
-    "%run Model.ipynb"
+    "%run Classes/SPDEs.ipynb\n",
+    "%run Classes/Rule.ipynb\n",
+    "%run Classes/Model.ipynb"
    ]
   },
   {
@@ -318,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -332,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
