--- a/Classes/SPDEs.ipynb
+++ b/Classes/SPDEs.ipynb
@@ -13,7 +13,7 @@
     "from time import time\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "%run Noise.ipynb"
+    "%run Classes/Noise.ipynb"
    ]
   },
   {
@@ -480,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -494,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
